--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -549,17 +549,25 @@
 
 <p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to your employee:</p>
 
- <details><summary>Income all exempt</summary> 
-<div id="tab1-step4a">
-	
-<ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col"><h4>Withholding obligations</h4>
+<h3>Withholding obligations</h3>
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col"><h4>Income all exempt</h4>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li> 	 
  <li><span class="fas fa-check fa-li text-success"></span> EI <small>- Withhold on <strong>all</strong> income</small></li>
  <li><span class="fas fa-check fa-li text-success"></span> CPP <small>- Withhold <strong>only</strong> if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></small></li>
 </ul></li>
-<li class="cnjnctn-col"><h4>Reporting obligations</h4>
+<li class="cnjnctn-col"><h4>Income partly-exempt</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span> Income tax <small>- Withhold <strong>only</strong> on taxable income</small></li> 	
+ <li><span class="fas fa-check fa-li text-success"></span> EI <small>- Withhold on <strong>all</strong> income</small></li> 	
+<li><span class="fas fa-check fa-li text-success"></span> CPP <small>- Withhold <strong>only</strong> on taxable income <strong>or</strong> on all income if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></small></li>  
+ </ul></li></ul>
+
+<h3>Reporting obligations</h3>
+
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col"><h4>Income all exempt</h4>
  <h5>Income and source deductions</h5>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Code 71 <small>- Report <strong>tax-exempt</strong> employment income</small></li>
@@ -578,25 +586,7 @@
 </ul>
 
  </li>
-</ul>
-<div id="ajax-cpp-info">
-<p>CPP <strong>is only </strong>withheld on the portion of the income that is taxable. Where the income is not taxable, CPP is <strong>not </strong>withheld, <strong>except </strong>if the employer has filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a> - Application to Cover the Employment of an Indian in Canada under the Canada Pension Plan whose Income is Exempt under the Income Tax Act.</p>
-<p>If the employer chooses not to apply for coverage, a <strong>First Nations employee</strong> can elect to pay <strong>CPP </strong>on tax-exempt earnings on Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt20.html">CPT20</a>, Election to Pay Canada Pension Plan Contributions when filing their personal income tax return.</p>
-  </div>
-	 </div>
-  </details>
-
- <details><summary>Income partly-exempt</summary> 
-<div id="tab1-step4b">
-<ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col"><h4>Withholding obligations</h4>
- <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span> Income tax <small>- Withhold <strong>only</strong> on taxable income</small></li> 	
- <li><span class="fas fa-check fa-li text-success"></span> EI <small>- Withhold on <strong>all</strong> income</small></li> 	
-<li><span class="fas fa-check fa-li text-success"></span> CPP <small>- Withhold <strong>only</strong> on taxable income <strong>or</strong> on all income if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></small></li>  
- </ul></li>
-
-<li class="cnjnctn-col"><h4>Reporting obligations</h4>
+<li class="cnjnctn-col"><h4>Income partly-exempt</h4>
 
  <h5>Income and source deductions</h5>
  <ul class="fa-ul mrgn-bttm-lg">
@@ -626,13 +616,15 @@
 <li><span class="fas fa-check fa-li text-success"></span>Codes for taxable benefits (for example, code 40) <small class="text-muted">- Report <strong>only on taxable income</strong> if you provided employment benefits</small> </li>
 </ul>
 </li>
-</ul>
- <div data-ajax-replace="#ajax-cpp-info"></div>
-                     
-	 </div>
-  </details>
 
-<div id="ajax-how-deduct-report">
+</ul>
+<div id="ajax-cpp-info">
+<p>CPP <strong>is only </strong>withheld on the portion of the income that is taxable. Where the income is not taxable, CPP is <strong>not </strong>withheld, <strong>except </strong>if the employer has filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a> - Application to Cover the Employment of an Indian in Canada under the Canada Pension Plan whose Income is Exempt under the Income Tax Act.</p>
+<p>If the employer chooses not to apply for coverage, a <strong>First Nations employee</strong> can elect to pay <strong>CPP </strong>on tax-exempt earnings on Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt20.html">CPT20</a>, Election to Pay Canada Pension Plan Contributions when filing their personal income tax return.</p>
+  </div>
+	 
+<hr>
+ <div id="ajax-how-deduct-report">
 <p class="mrgn-tp-lg">Learn more:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate - Calculate payroll deductions and contributions</a>  </li>
