--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -544,30 +544,40 @@
 </ol>
  </li>
 
+<li><h3 id="step4">Withhold deductions on the payment you made to your employee</h3>
+<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions on the payment you made to your employee depending if the income is:</p>
 
-<li><h3 id="step4">Withhold and report the payment on a T4 slip</h3>
-
-<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to your employee:</p>
-
-<h3>Withholding obligations</h3>
-<ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"><h4>Income all exempt</h4>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><h4>All exempt</h4>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li> 	 
  <li><span class="fas fa-check fa-li text-success"></span> EI <small>- Withhold on <strong>all</strong> income</small></li>
  <li><span class="fas fa-check fa-li text-success"></span> CPP <small>- Withhold <strong>only</strong> if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></small></li>
 </ul></li>
-<li class="cnjnctn-col"><h4>Income partly-exempt</h4>
+<li class="cnjnctn-col"><h4>Partly-exempt</h4>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span> Income tax <small>- Withhold <strong>only</strong> on taxable income</small></li> 	
  <li><span class="fas fa-check fa-li text-success"></span> EI <small>- Withhold on <strong>all</strong> income</small></li> 	
 <li><span class="fas fa-check fa-li text-success"></span> CPP <small>- Withhold <strong>only</strong> on taxable income <strong>or</strong> on all income if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></small></li>  
  </ul></li></ul>
 
-<h3>Reporting obligations</h3>
+<div id="ajax-cpp-info">
+<p>CPP <strong>is only </strong>withheld on the portion of the income that is taxable. Where the income is not taxable, CPP is <strong>not </strong>withheld, <strong>except </strong>if the employer has filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a> - Application to Cover the Employment of an Indian in Canada under the Canada Pension Plan whose Income is Exempt under the Income Tax Act.</p>
+<p>If the employer chooses not to apply for coverage, a <strong>First Nations employee</strong> can elect to pay <strong>CPP </strong>on tax-exempt earnings on Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt20.html">CPT20</a>, Election to Pay Canada Pension Plan Contributions when filing their personal income tax return.</p>
+  </div>
 
-<ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"><h4>Income all exempt</h4>
+<div id="ajax-how-withhold-t4">
+<p class="mrgn-tp-lg">Learn more: <span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate payroll deductions and contributions</a> </p>
+  </div>
+
+ </li>
+
+<li><h3 id="step5">Report the payment on a T4 slip</h3>
+
+<p class="mrgn-bttm-lg">Generally, you must report on a <strong>T4 slip</strong> the payment you made to your employee depending if the income is:</p>
+
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><h4>All exempt</h4>
  <h5>Income and source deductions</h5>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Code 71 <small>- Report <strong>tax-exempt</strong> employment income</small></li>
@@ -586,7 +596,7 @@
 </ul>
 
  </li>
-<li class="cnjnctn-col"><h4>Income partly-exempt</h4>
+<li class="cnjnctn-col"><h4>Partly-exempt</h4>
 
  <h5>Income and source deductions</h5>
  <ul class="fa-ul mrgn-bttm-lg">
@@ -618,19 +628,11 @@
 </li>
 
 </ul>
-<div id="ajax-cpp-info">
-<p>CPP <strong>is only </strong>withheld on the portion of the income that is taxable. Where the income is not taxable, CPP is <strong>not </strong>withheld, <strong>except </strong>if the employer has filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a> - Application to Cover the Employment of an Indian in Canada under the Canada Pension Plan whose Income is Exempt under the Income Tax Act.</p>
-<p>If the employer chooses not to apply for coverage, a <strong>First Nations employee</strong> can elect to pay <strong>CPP </strong>on tax-exempt earnings on Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt20.html">CPT20</a>, Election to Pay Canada Pension Plan Contributions when filing their personal income tax return.</p>
-  </div>
 	 
 <hr>
- <div id="ajax-how-deduct-report">
-<p class="mrgn-tp-lg">Learn more:</p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate - Calculate payroll deductions and contributions</a>  </li>
-<li class="cnjnctn-col"><span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/complete.html">Fill out the slips and summaries - File information returns (slips and summaries)</a>  </li>
-</ul>
- </div>	 
+ <div id="ajax-how-report-t4">
+<p class="mrgn-tp-lg">Learn more: <span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/t4slip.html">T4 slip - Information for employers</a></p>
+</div>	 
 </li>
 
 </ol>
@@ -741,13 +743,13 @@
 </div>
 </details>
 
-<div id="ajax-how-deduct-report">
-<p class="mrgn-tp-lg">Learn more:</p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate - Calculate payroll deductions and contributions</a>  </li>
-<li class="cnjnctn-col"><span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/complete.html">Fill out the slips and summaries - File information returns (slips and summaries)</a>  </li>
-</ul>
- </div>	 
+<div id="ajax-how-withhold-t4a">
+<p class="mrgn-tp-lg">Learn more: <span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate payroll deductions and contributions</a> </p>
+  </div>
+
+ <div id="ajax-how-report-t4a">
+<p class="mrgn-tp-lg">Learn more: <span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a></p>
+</div>	 
 </li>
 </ol>
 
