--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -371,7 +371,7 @@
 
 </details>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your First Nations employee lives on a reserve <strong>and</strong> you (as the employer) are a resident on a reserve, continue to <a href="#tab1-step4a">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your First Nations employee lives on a reserve <strong>and</strong> you (as the employer) are a resident on a reserve, continue to <a href="#tab1-step4">Step 4 - Withhold deductions on the employment income paid to your First Nations employee</a> and <strong>income all exempt</strong>.</li>
                <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your First Nations employee <strong>does not</strong> live on a reserve <strong>or</strong> you (as the employer) are <strong>not</strong> a resident on a reserve, continue to <a href="#step3b">Step 3b - Determine if guideline 4 applies</a>.</li>
             </ul>
 </li>
@@ -397,7 +397,7 @@
 
 </details>
  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If you (as the employer) are resident on a reserve and you meet <strong>all</strong> conditions for the exemption, continue to <a href="#tab1-step4a">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If you (as the employer) are resident on a reserve and you meet <strong>all</strong> conditions for the exemption, continue to <a href="#tab1-step4">Step 4 - Withhold deductions on the employment income paid to your First Nations employee</a> and <strong>income all exempt</strong>.</li>
                <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the situation <strong>does not</strong> apply, continue to <a href="#step3c">Step 3c - Determine the percentage of duties related to employment on a reserve</a>.</li>
             </ul>
 
@@ -512,7 +512,7 @@
 <p> <a href="#ajax-example3b" aria-controls="ajax-example3b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
 </details>
  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs more than 50% of their employment duties on a reserve, continue to <a href="#tab1-step4a">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs more than 50% of their employment duties on a reserve, continue to <a href="#tab1-step4">Step 4 - Withhold deductions on the employment income paid to your First Nations employee</a> and <strong>income all exempt</strong>.</li>
                <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs 50% or less of their employment duties on a reserve, continue to <a href="#step3e">Step 3e - Determine if guideline 1 applies</a>.</li>
             </ul>
 
@@ -526,7 +526,7 @@
 <p> <a href="#ajax-example1b" aria-controls="ajax-example1b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
 </details>
  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your First Nations employee performs at least 90% of their employment duties on a reserve, continue to <a href="#tab1-step4a">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your First Nations employee performs at least 90% of their employment duties on a reserve, continue to <a href="#tab1-step4a">Step 4 - Withhold deductions on the employment income paid to your First Nations employee</a> and <strong>income all exempt</strong>.</li>
                <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your First Nations employee performs certain duties of their employment duties on a reserve, continue to <a href="#step3f">Step 3f - Calculate the proration of the employment income - Guideline 1 (propration rule).</a></li>
             </ul>
 </li>
@@ -538,14 +538,14 @@
 <p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 </details>
 <br>
-<p><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#tab1-step4b">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income partly-exempt</strong>.</p>
+<p><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#tab1-step4">Step 4 - Withhold deductions on the employment income paid to your First Nations employee</a> and <strong>income partly-exempt</strong>.</p>
 </li>
 
 </ol>
  </li>
 
-<li><h3 id="step4">Withhold deductions on the payment you made to your employee</h3>
-<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions on the payment you made to your employee depending if the income is:</p>
+<li><h3 id="step4">Withhold deductions on the employment income paid to your First Nations employee</h3>
+<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions on the employment income paid to your First Nations employee depending if the income is:</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4>All exempt</h4>
@@ -574,7 +574,7 @@
 
 <li><h3 id="step5">Report the payment on a T4 slip</h3>
 
-<p class="mrgn-bttm-lg">Generally, you must report on a <strong>T4 slip</strong> the payment you made to your employee depending if the income is:</p>
+<p class="mrgn-bttm-lg">Generally, you must report on a <strong>T4 slip</strong> the employment income paid to your First Nations employee depending if the income is:</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4>All exempt</h4>
