--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -572,7 +572,7 @@
 
  </li>
 
-<li><h3 id="step5">Report the payment on a T4 slip</h3>
+<li><h3 id="tab1-step5">Report the payment on a T4 slip</h3>
 
 <p class="mrgn-bttm-lg">Generally, you must report on a <strong>T4 slip</strong> the employment income paid to your First Nations employee depending if the income is:</p>
 
@@ -686,20 +686,35 @@
 
 </li>
 
+<li><h3 id="tab2-step3">Withhold deductions on the employment-related income paid to the First Nations recipient</h3>
+<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions on the employment-related income paid to the First Nations recipient depending if the income is:</p>
 
-<li><h3 id="tab2-step3">Withhold and report the payment on a T4A slip</h3>
-
-<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made to a First Nations recipient:</p>
- <details><summary>Income all exempt</summary> 
-<div id="ajax-tab2-step3a">
-<ul class="list-unstyled cnjnctn-type-and ">
-<li class="cnjnctn-col"><h4>Withholding obligations</h4>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><h4>All exempt</h4>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
 <li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
 <li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li> 
 </ul></li>
-<li class="cnjnctn-col"><h4>Reporting obligations</h4>
+<li class="cnjnctn-col"><h4>Partly-exempt</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
+<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
+<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li>    
+ </ul></li></ul>
+
+<div id="ajax-how-withhold-t4">
+<p class="mrgn-tp-lg">Learn more: <span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate payroll deductions and contributions</a> </p>
+  </div>
+
+ </li>
+
+<li><h3 id="tab2-step4">Report the payment on a T4A slip</h3>
+
+<p class="mrgn-bttm-lg">Generally, you must report on a <strong>T4A slip</strong> the employment-related income paid to the First Nations recipient depending if the income is:</p>
+
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><h4>All exempt</h4>
  <h5>Other income</h5>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Code 144 <small>- Report <strong>tax-exempt</strong> other income</small></li>
@@ -713,19 +728,7 @@
 <ul class="fa-ul mrgn-bttm-lg">
  <li><span class="fas fa-check fa-li text-success"></span> Code 148 <small>- Report <strong>tax-exempt</strong> lump-sum payments</small></li>
 </ul></li>
-</ul>
-<p class="mrgn-tp-md">Generally, income is exempt from tax when a person receives them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p>
- </div>	  </details>
- <details><summary>Income partly-exempt</summary> 
-<div id="ajax-tab2-step3b">
-<ul class="list-unstyled cnjnctn-type-and ">
-<li class="cnjnctn-col"><h4>Withholding obligations</h4>
- <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
-<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
-<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li>  
-</ul></li>
-<li class="cnjnctn-col"><h4>Reporting obligations</h4>
+<li class="cnjnctn-col"><h4>Partly-exempt</h4>
 <h5>Pension or superannuation</h5>
  <ul class="fa-ul mrgn-bttm-lg">
  <li><span class="fas fa-check fa-li text-success"></span> Box 016 <small>- Report <strong>taxable</strong> pension or superannuation</small></li>
@@ -739,18 +742,11 @@
 </ul>
 </li>
 </ul>
-<p class="mrgn-tp-md">Generally, income is exempt from tax when a person receives them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p>
-</div>
-</details>
-
-<div id="ajax-how-withhold-t4a">
-<p class="mrgn-tp-lg">Learn more: <span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate payroll deductions and contributions</a> </p>
-  </div>
-
- <div id="ajax-how-report-t4a">
+<div id="ajax-how-report-t4a">
 <p class="mrgn-tp-lg">Learn more: <span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a></p>
-</div>	 
+</div>	
 </li>
+
 </ol>
 
  </details>
