--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -527,10 +527,10 @@
 </details>
  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your First Nations employee performs at least 90% of their employment duties on a reserve, continue to <a href="#tab1-step4a">Step 4 - Withhold deductions on the employment income paid to your First Nations employee</a> and <strong>income all exempt</strong>.</li>
-               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your First Nations employee performs certain duties of their employment duties on a reserve, continue to <a href="#step3f">Step 3f - Calculate the proration of the employment income - Guideline 1 (propration rule).</a></li>
+               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your First Nations employee performs certain duties of their employment duties on a reserve, continue to <a href="#step3f">Step 3f - Calculate the proration of the employment income (guideline 1 - proration rule).</a></li>
             </ul>
 </li>
-<li><h4 id="step3f">Calculate the proration of the employment income - Guideline 1 (propration rule)</h4>
+<li><h4 id="step3f">Calculate the proration of the employment income (guideline 1 - proration rule)</h4>
 <details><summary>Your First Nations employee performs less than 90% of their employment duties on a reserve</summary>
 <p>Generally, the income is partly-exempt from income tax if your First Nations employee performs less than 90% of the duties related to their employment on a reserve and the income is not exempt in other guidelines.</p>
 <p>The exemption is prorated to the portion of the income related to the duties the First Nations employee performed on the reserve.</p>
