--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -266,7 +266,7 @@
 
 <p>Determine your withholding and reporting obligations based on the nature of the payment you made:</p>
 <ul>
-<li><a href="#subtab1" class="wb-tabs-ext">Employment income</a> (including employment-related income)</li>
+<li><a href="#subtab1" class="wb-tabs-ext">Employment income</a> </li>
 <li><a href="#subtab2" class="wb-tabs-ext">Employment-related income</a> (for example, pension income, retiring allowances, RRSP and CPP/QPP)</li>
 <li><a href="#subtab3" class="wb-tabs-ext">Self-employed fishing, farming, barber, hairdresser or driver income</a></li>
 <li><a href="#subtab4" class="wb-tabs-ext">Other self-employed income</a></li>
@@ -660,28 +660,28 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the employment income was <strong>not exempt</strong>, <strong>do not</strong> continue to next step.</p> 
 
-<p>You must deduct CPP, EI and income tax as you would for your other employees. </p> 
+<p>You must deduct income tax as you would for your other employees. </p> 
 </li>
 <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the employment income was exempt or partly-exempt, continue to <a href="#tab2-step2">Step 2 - Determine the percentage of employment-reatled income that was exempt</a>.</li>
 </ul>
  </li>
 
-<li><h3 id="tab2-step2">Determine the percentage of employment-reatled income that was exempt</h3>
+<li><h3 id="tab2-step2">Determine the percentage of employment-related income that was exempt</h3>
  <div id="ajax-how-tab2-step2-prorate">
  
-<p>You need to determine the portion of the employment-related income of the First Nations employee that relates to when the payment was received as a result of employment income. </p>
+<p>You need to determine the portion of the employment-related income of the First Nations employee that is related to tax-exempt employment income when the payment was received as a result of employment income. </p>
 
-<p>Generally, the employment-related income is partly-exempt from income tax if part of the First Nations employment income was partly-exempt. </p>
+<p>Generally, the employment-related income is partly-exempt from income tax if the First Nations employment income that arise from the payment was partly-exempt. </p>
 
-<p>The exemption is prorated to the portion of the income related to the employment-related income on the payment received as a result of employment income.</p>
+<p>The exemption is prorated to the portion of the employment-related income related to the tax-exempt portion of the employment income.</p>
 
 <p>If that employment income was partly-exempt from income tax, the employment-related income arising from the exempt share of that income will also be exempt from income tax.</p>
 
 </div>
 <hr>
  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the employment-related income is all tax-exempt, continue to <a href="#ajax-tab2-step3a">Step 3 - Withhold and report the payment on a T4A slip</a> and select <strong>income all exempt</strong>.</li>
-               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the employment-related income is partly-exempt, continue to <a href="#ajax-tab2-step3b">Step 3 - Withhold and report the payment on a T4A slip</a> and select <strong>income is partly-exempt</strong>.</li>
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the employment-related income is all tax-exempt, continue to <a href="#ajax-tab2-step3">Step 3 - Withhold deductions on the employment-related income paid to the First Nations recipient</a> and <strong>income all exempt</strong>.</li>
+               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the employment-related income is partly-exempt, continue to <a href="#ajax-tab2-step3">Step 3 - Withhold deductions on the employment-related income paid to the First Nations recipient</a> and <strong>income is partly-exempt</strong>.</li>
             </ul>
 
 </li>
