--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -662,7 +662,7 @@
 
 <p>You must deduct income tax as you would for your other employees. </p> 
 </li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the employment income was exempt or partly-exempt, continue to <a href="#tab2-step2">Step 2 - Determine the percentage of employment-reatled income that was exempt</a>.</li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the employment income was exempt or partly-exempt, continue to <a href="#tab2-step2">Step 2 - Determine the percentage of employment-related income that was exempt</a>.</li>
 </ul>
  </li>
 
@@ -687,25 +687,13 @@
 </li>
 
 <li><h3 id="tab2-step3">Withhold deductions on the employment-related income paid to the First Nations recipient</h3>
-<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions on the employment-related income paid to the First Nations recipient depending if the income is:</p>
+<p class="mrgn-bttm-lg">Generally, you  <strong>do not</strong> withhold the following deductions on the employment-related income paid to the First Nations recipient regardless if the income is exempt or partly-exempt:</p>
 
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><h4>All exempt</h4>
- <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
-<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
-<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li> 
-</ul></li>
-<li class="cnjnctn-col"><h4>Partly-exempt</h4>
- <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
-<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
-<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li>    
- </ul></li></ul>
-
-<div id="ajax-how-withhold-t4">
-<p class="mrgn-tp-lg">Learn more: <span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate payroll deductions and contributions</a> </p>
-  </div>
+<ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax </li>	
+<li><span class="fas fa-times text-danger fa-li"></span> EI </li>
+<li><span class="fas fa-times text-danger fa-li"></span> CPP </li> 
+</ul>
 
  </li>
 
