--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -717,10 +717,16 @@
  <li><span class="fas fa-check fa-li text-success"></span> Code 148 <small>- Report <strong>tax-exempt</strong> lump-sum payments</small></li>
 </ul></li>
 <li class="cnjnctn-col"><h4>Partly-exempt</h4>
+<h5>Other income</h5>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span>Code 28 <small>- Report <strong>taxable</strong> other income</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Code 144 <small>- Report <strong>tax-exempt</strong> other income</small></li>
+</ul>
 <h5>Pension or superannuation</h5>
  <ul class="fa-ul mrgn-bttm-lg">
  <li><span class="fas fa-check fa-li text-success"></span> Box 016 <small>- Report <strong>taxable</strong> pension or superannuation</small></li>
  <li><span class="fas fa-check fa-li text-success"></span> Code 146 <small>- Report <strong>tax-exempt</strong> pension or superannuation</small> </li>
+ <li><span class="fas fa-check fa-li text-success"></span> Code 194 <small>- Report <strong>taxable</strong> PRPP payments</small> </li>
  <li><span class="fas fa-check fa-li text-success"></span> Code 195 <small>- Report <strong>tax-exempt</strong> PRPP payments</small> </li>
 </ul>
 <h5>Lump-sum payments</h5>
