--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -731,9 +731,7 @@
 </ul>
 </li>
 </ul>
-<div id="ajax-how-report-t4a">
 <p class="mrgn-tp-lg">Learn more: <span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a></p>
-</div>	
 </li>
 
 </ol>
@@ -880,57 +878,39 @@
 <li><h3 id="tab4-step2">Determine the percentage of income situated on a reserve</h3>
 <div data-ajax-replace="#ajax-how-tab3-prorate"></div>
 
-<hr>
- <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the self-employed income is all tax-exempt, continue to <a href="#ajax-tab4-step3a">Step 3 - Withhold and report the payment on a T4A slip</a> and select <strong>income all exempt</strong>.</li>
-               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the employment-related income is partly-exempt, continue to <a href="#ajax-tab4-step3b">Step 3 - Withhold and report the payment on a T4A slip</a> and select <strong>income is partly-exempt</strong>.</li>
-            </ul>
+
 </li>
 
-<li><h3 id="tab4-step3">Withhold and report the payment on a T4A slip</h3>
-<p>Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made: </p>
- <details><summary>Income all exempt</summary> 
-   <div id="ajax-tab4-step3a">
+<li><h3 id="tab4-step3">Withhold deductions on the payment made to the First Nations self-employed recipient</h3>
+<p class="mrgn-bttm-lg">Generally, you  <strong>do not</strong> withhold the following deductions on the payment made to the First Nations self-employed recipient regardless if the income is exempt or partly-exempt:</p>
 
-<ul class="list-unstyled cnjnctn-type-and ">
-<li class="cnjnctn-col"><h4>Withholding obligations</h4>
- <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
-<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
-<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li>  
- 
-</ul></li>
-<li class="cnjnctn-col"><h4>Reporting obligations</h4>
+<ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax </li>	
+<li><span class="fas fa-times text-danger fa-li"></span> EI </li>
+<li><span class="fas fa-times text-danger fa-li"></span> CPP </li> 
+</ul>
+
+ </li>
+
+
+<li><h3 id="tab4-step4">Report the payment on a T4A slip</h3>
+
+<p class="mrgn-bttm-lg">Generally, you must report on a <strong>T4A slip</strong> the payment made to the First Nations self-employed recipient depending if the income is:</p>
+
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><h4>All exempt</h4>
  <ul class="fa-ul mrgn-bttm-lg">
  <li><span class="fas fa-check fa-li text-success"></span>Code 144 <small>- Report <strong>tax-exempt</strong> other income</small></li>
 </ul></li>
-</ul>
- 	 </div>
-  </details>
-
- <details><summary>Income partly-exempt</summary> 
-   <div id="ajax-tab4-step3b">
-<ul class="list-unstyled cnjnctn-type-and ">
-<li class="cnjnctn-col"><h4>Withholding obligations</h4>
- <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
-<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
-<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li>  
- </ul></li>
-
-<li class="cnjnctn-col"><h4>Reporting obligations</h4>
+   
+<li class="cnjnctn-col"><h4>Partly-exempt</h4>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Box 028 <small>- Report <strong>only on taxable income</strong> if you paid fees for services</small> </li>
 <li><span class="fas fa-check fa-li text-success"></span>Box 048 <small>- Report <strong>only on taxable income</strong> other income</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Code 144 <small>- Report <strong>tax-exempt</strong> other income</small></li>
 </ul></li>
 </ul>
-
-	   </div>
-  </details>
-
-<div data-ajax-replace="#ajax-how-deduct-report"></div>
-
+<p class="mrgn-tp-lg">Learn more: <span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a></p>
 </li>
 
 </ol>
