--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -566,10 +566,9 @@
 <p>If the employer chooses not to apply for coverage, a <strong>First Nations employee</strong> can elect to pay <strong>CPP </strong>on tax-exempt earnings on Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt20.html">CPT20</a>, Election to Pay Canada Pension Plan Contributions when filing their personal income tax return.</p>
   </div>
 
-<div id="ajax-how-withhold-t4">
-<p class="mrgn-tp-lg">Learn more: <span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate payroll deductions and contributions</a> </p>
-  </div>
 
+<p class="mrgn-tp-lg">Learn more: <span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate payroll deductions and contributions</a> </p>
+ 
  </li>
 
 <li><h3 id="tab1-step5">Report the payment on a T4 slip</h3>
@@ -629,10 +628,7 @@
 
 </ul>
 	 
-<hr>
- <div id="ajax-how-report-t4">
 <p class="mrgn-tp-lg">Learn more: <span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/t4slip.html">T4 slip - Information for employers</a></p>
-</div>	 
 </li>
 
 </ol>
@@ -786,43 +782,45 @@
 
 </li>
 
-<li><h3 id="tab3-step3">Withhold and report the payment on a T4 slip</h3>
-<p>Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made: </p>
- <details><summary>Income all exempt</summary> 
-   <div id="ajax-tab3-step3a">
+<li><h3 id="tab3-step3">Withhold deductions on the employment income paid to your First Nations worker</h3>
+<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions on the self-employment income paid to the First Nations worker depending if the income is:</p>
 
-<ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col"><h4>Withholding obligations</h4>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><h4>All exempt</h4>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>  
  <li><span class="fas fa-check fa-li text-success"></span> EI <small>- Withhold  on <strong>all</strong> income (under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>
   <li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li>
- 
-</ul></li>
-<li class="cnjnctn-col"><h4>Reporting obligations</h4>
- <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small>- Report EI premiums and insurable earnings on <strong>all</strong> income</small></li>
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 20  <small>- <strong>Do not</strong> report if you withheld RPP contributions (you must provide proof to the self-employed worker of RPP contributions for all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 	
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 44 <small>- <strong>Do not</strong> report if you withheld union dues (you must provide proof to the self-employed worker of union dues withheld from all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 	
- <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small>- Report <strong>tax-exempt</strong> self-employment income</small></li>
-</ul></li>
-</ul>
- 
-	 </div>
-  </details>
+ </ul></li>
 
- <details><summary>Income partly-exempt</summary> 
-    <div id="ajax-tab3-step3b">
-<ul class="list-unstyled cnjnctn-type-and ">
-<li class="cnjnctn-col"><h4>Withholding obligations</h4>
+<li class="cnjnctn-col"><h4>Partly-exempt</h4>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
  <li><span class="fas fa-check fa-li text-success"></span> EI <small>- Withhold  on <strong>all</strong> income (under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>	
  <li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li>  
- </ul></li>
+ </ul></li></ul>
 
-<li class="cnjnctn-col"><h4>Reporting obligations</h4>
- <ul class="fa-ul mrgn-bttm-lg">
+<p class="mrgn-tp-lg">Learn more: <span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate payroll deductions and contributions</a> </p>
+ 
+ </li>
+
+
+<li><h3 id="tab3-step4">Report the payment on a T4 slip</h3>
+
+<p class="mrgn-bttm-lg">Generally, you must report on a <strong>T4 slip</strong> the self-employment income paid to your First Nations worker depending if the income is:</p>
+
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><h4>All exempt</h4>
+  <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small>- Report EI premiums and insurable earnings on <strong>all</strong> income</small></li>
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 20  <small>- <strong>Do not</strong> report if you withheld RPP contributions (you must provide proof to the self-employed worker of RPP contributions for all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 	
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 44 <small>- <strong>Do not</strong> report if you withheld union dues (you must provide proof to the self-employed worker of union dues withheld from all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 	
+ <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small>- Report <strong>tax-exempt</strong> self-employment income</small></li>
+</ul>	
+</li>
+
+<li class="cnjnctn-col"><h4>Partly-exempt</h4>
+<ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 29 <small>- Use the appropriate self-employment code</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small>- Report EI premiums and insurable earnings on <strong>all</strong> income</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Box 20 <small>- Report <strong>only on taxable income</strong> 
@@ -833,13 +831,11 @@
  <li><span class="fas fa-check fa-li text-success"></span>Code 83  <small>- Report <strong>taxable income</strong> of <strong>self-employed barbers and hairdressers</strong></small></li>
  <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small>- Report <strong>tax-exempt</strong> self-employment income</small></li>
 
-</ul></li>
 </ul>
 
-	   </div>
-  </details>
+</li></ul>
 
-<div data-ajax-replace="#ajax-how-deduct-report"></div>
+<p class="mrgn-tp-lg">Learn more: <span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/t4slip.html">T4 slip - Information for employers</a></p>
 
 </li>
 
