--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -783,22 +783,13 @@
 </li>
 
 <li><h3 id="tab3-step3">Withhold deductions on the employment income paid to your First Nations worker</h3>
-<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions on the self-employment income paid to the First Nations worker depending if the income is:</p>
+<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions on the self-employment income paid to the First Nations worker regardless if the income is exempt or partly-exempt:</p>
 
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><h4>All exempt</h4>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>  
  <li><span class="fas fa-check fa-li text-success"></span> EI <small>- Withhold  on <strong>all</strong> income (under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>
   <li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li>
- </ul></li>
-
-<li class="cnjnctn-col"><h4>Partly-exempt</h4>
- <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
- <li><span class="fas fa-check fa-li text-success"></span> EI <small>- Withhold  on <strong>all</strong> income (under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>	
- <li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li>  
- </ul></li></ul>
+ </ul>
 
 <p class="mrgn-tp-lg">Learn more: <span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate payroll deductions and contributions</a> </p>
  
