--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -802,25 +802,45 @@
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4>All exempt</h4>
-  <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small>- Report EI premiums and insurable earnings on <strong>all</strong> income</small></li>
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 20  <small>- <strong>Do not</strong> report if you withheld RPP contributions (you must provide proof to the self-employed worker of RPP contributions for all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 	
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 44 <small>- <strong>Do not</strong> report if you withheld union dues (you must provide proof to the self-employed worker of union dues withheld from all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 	
+ <h5>Income and source deductions</h5>
+ <ul class="fa-ul mrgn-bttm-lg">
  <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small>- Report <strong>tax-exempt</strong> self-employment income</small></li>
-</ul>	
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small>- Report EI premiums and insurable earnings on <strong>all</strong> income</small></li>
+</ul>
+ <h5>Pension or superannuation</h5>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 20  <small>- <strong>Do not</strong> report if you withheld RPP contributions (you must provide proof to the self-employed worker of RPP contributions for all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 
+</ul>
+
+<h5>Union dues</h5>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 44 <small>- <strong>Do not</strong> report if you withheld union dues (you must provide proof to the self-employed worker of union dues withheld from all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 
+</ul>
 </li>
 
 <li class="cnjnctn-col"><h4>Partly-exempt</h4>
-<ul class="fa-ul mrgn-bttm-lg">
+<h5>Income and source deductions</h5>
+ <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 29 <small>- Use the appropriate self-employment code</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small>- Report EI premiums and insurable earnings on <strong>all</strong> income</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Box 20 <small>- Report <strong>only on taxable income</strong> 
- if you withheld RPP contributions (you must provide proof to to the self-employed worker of RPP contributions for all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span> Box 44 <small>- Report <strong>only on taxable income</strong> if you withheld union dues (you must provide proof to to the self-employed worker of union dues withheld from all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 
 <li><span class="fas fa-check fa-li text-success"></span>Codes 78, 79 and 80 <small>- Report <strong>taxable income</strong> of <strong>self-employed fishers</strong></small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Code 82  <small>- Report <strong>taxable income</strong> of <strong>self-employed taxi drivers and drivers of other passenger-carrying vehicles</strong></small></li>
  <li><span class="fas fa-check fa-li text-success"></span>Code 83  <small>- Report <strong>taxable income</strong> of <strong>self-employed barbers and hairdressers</strong></small></li>
  <li><span class="fas fa-check fa-li text-success"></span>Code 88 <small>- Report <strong>tax-exempt</strong> self-employment income</small></li>
+</ul>
+ <h5>Pension or superannuation</h5>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span>Box 20 <small>- Report <strong>only on taxable income</strong> 
+ if you withheld RPP contributions (you must provide proof to to the self-employed worker of RPP contributions for all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li>
+</ul>
+
+<h5>Union dues</h5>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span> Box 44 <small>- Report <strong>only on taxable income</strong> if you withheld union dues (you must provide proof to to the self-employed worker of union dues withheld from all tax-exempt income, the self-employed worker will use this amount to fill out Form T90)</small></li> 
+</ul>
+
+<h5>Taxable benefits</h5>
+ <ul class="fa-ul mrgn-bttm-lg">
 
 </ul>
 
