--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -744,10 +744,16 @@
 <div id="ajax-reg-tab3">
 <p> The exemption from tax under section 87 of the Indian Act <strong>only</strong> applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
 
-<p>The self-employment income earned by the First Nations worker must be  situated on a reserve to be exempt from tax. </p>
-<p>To determine if the income is situated on a reserve, you must apply the <a href="#factors-test" aria-controls="factors-test" class="overlay-lnk" role="button">connecting factors test <span class="far fa-question-circle"></span></a> to the income to meet all conditions for the exemption.</p>
+<p>The self-employment income earned by the First Nations worker must be situated on a reserve to be exempt from tax. </p>
 
+<p>You must determine if the income is situated on a reserve based on the type of self-employed income based on specific connecting factors test.</p>
+
+<h3>Factors to consider for self-employed barber, hairdresser or dirver income</h3>
+<p>To determine if the income is situated on a reserve, you must apply the <a href="#factors-test" aria-controls="factors-test" class="overlay-lnk" role="button">connecting factors test <span class="far fa-question-circle"></span></a> to the income to meet all conditions for the exemption. </p>
 <p> <a href="#self-connect" aria-controls="self-connect" class="overlay-lnk" role="button">Examples of business or self-employment income situated on a reserve <span class="far fa-question-circle"></span></a> </p>
+
+<h3>Factors to consider for self-employed fishing or farming income</h3>
+<p>To determine if the income is situated on a reserve, you must apply the</p>
 
 </div>
 <hr>
@@ -761,6 +767,8 @@
 <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the self-employment income meets all conditions for the exemption, continue to <a href="#tab3-step2">Step 2 - Determine the percentage of income situated on a reserve</a>.</li>
 </ul>
  </li>
+
+
 
 <li><h3 id="tab3-step2">Determine the percentage of income situated on a reserve</h3>
  <div id="ajax-how-tab3-prorate">
