--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -746,20 +746,15 @@
 
 <p>The self-employment income earned by the First Nations worker must be situated on a reserve to be exempt from tax. </p>
 
-<p>You must determine if the income is situated on a reserve based on the type of self-employed income based on specific connecting factors test.</p>
-
-<h3>Factors to consider for self-employed barber, hairdresser or dirver income</h3>
 <p>To determine if the income is situated on a reserve, you must apply the <a href="#factors-test" aria-controls="factors-test" class="overlay-lnk" role="button">connecting factors test <span class="far fa-question-circle"></span></a> to the income to meet all conditions for the exemption. </p>
 <p> <a href="#self-connect" aria-controls="self-connect" class="overlay-lnk" role="button">Examples of business or self-employment income situated on a reserve <span class="far fa-question-circle"></span></a> </p>
 
-<h3>Factors to consider for self-employed fishing income</h3>
+<h4>How to apply the factors for self-employed fishing income</h4>
 <p>To determine if the income is situated on a reserve, you must apply the add here.</p>
 <p> <a href="#self-connect-fish" aria-controls="self-connect-fish" class="overlay-lnk" role="button">Examples of self-employment fishing income where exempt or not exempt <span class="far fa-question-circle"></span></a> </p>
 
-<h3>Factors to consider for self-employed farming income</h3>
+<h4>How to apply the factors for self-employed farming income</h4>
 <p>To determine if the income is situated on a reserve, you must apply the add here.</p>
-
-
 </div>
 <hr>
 
