--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -749,8 +749,9 @@
 <p>To determine if the income is situated on a reserve, you must apply the <a href="#factors-test" aria-controls="factors-test" class="overlay-lnk" role="button">connecting factors test <span class="far fa-question-circle"></span></a> to the income to meet all conditions for the exemption. </p>
 <p> <a href="#self-connect" aria-controls="self-connect" class="overlay-lnk" role="button">Examples of business or self-employment income situated on a reserve <span class="far fa-question-circle"></span></a> </p>
 
-<h4>How to apply the factors for self-employed fishing income</h4>
-<p>To determine if the income is situated on a reserve, you must apply the add here.</p>
+<h4>Self-employed fishing income</h4>
+<p><a href="#self-connect-fish-how" aria-controls="self-connect-fish-how" class="overlay-lnk" role="button">How to apply the factors for self-employed fishing income<span class="far fa-question-circle"></span></a> for the connecting factors test. </p>
+
 <p> <a href="#self-connect-fish" aria-controls="self-connect-fish" class="overlay-lnk" role="button">Examples of self-employment fishing income where exempt or not exempt <span class="far fa-question-circle"></span></a> </p>
 
 <h4>How to apply the factors for self-employed farming income</h4>
@@ -1114,6 +1115,13 @@
 <section id="self-connect" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Examples of business or self-employment income situated on a reserve</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#example-self-business"></div>
+	</div></section>
+
+<section id="self-connect-fish-how" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">How to apply the factors for self-employed fishing income </h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#connect-fishing-income1"></div>
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#connect-fishing-income2"></div>
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#connect-fishing-income3"></div>
 	</div></section>
 
 <section id="self-connect-fish" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Examples of self-employment fishing income where exempt or not exempt </h2>
