--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -754,8 +754,8 @@
 
 <p> <a href="#self-connect-fish" aria-controls="self-connect-fish" class="overlay-lnk" role="button">Examples of self-employment fishing income where exempt or not exempt <span class="far fa-question-circle"></span></a> </p>
 
-<h4>How to apply the factors for self-employed farming income</h4>
-<p>To determine if the income is situated on a reserve, you must apply the add here.</p>
+<h4>Self-employed farming income</h4>
+<p><a href="#self-connect-farming-how" aria-controls="self-connect-farming-how" class="overlay-lnk" role="button">How to apply the factors for self-employed farming income<span class="far fa-question-circle"></span></a> for the connecting factors test. </p>
 </div>
 <hr>
 
@@ -1122,6 +1122,12 @@
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#connect-fishing-income1"></div>
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#connect-fishing-income2"></div>
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#connect-fishing-income3"></div>
+	</div></section>
+
+<section id="self-connect-farmer-how" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">How to apply the factors for self-employed farming income </h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#connect-farming-income1"></div>
+	
 	</div></section>
 
 <section id="self-connect-fish" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Examples of self-employment fishing income where exempt or not exempt </h2>
