--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -1124,7 +1124,7 @@
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#connect-fishing-income3"></div>
 	</div></section>
 
-<section id="self-connect-farmer-how" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">How to apply the factors for self-employed farming income </h2>
+<section id="self-connect-farming-how" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">How to apply the factors for self-employed farming income </h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#connect-farming-income1"></div>
 	
