--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -268,8 +268,8 @@
 <ul>
 <li><a href="#subtab1" class="wb-tabs-ext">Employment income</a> </li>
 <li><a href="#subtab2" class="wb-tabs-ext">Employment-related income</a> (for example, pension income, retiring allowances, RRSP and CPP/QPP)</li>
-<li><a href="#subtab3" class="wb-tabs-ext">Self-employed fishing, farming, barber, hairdresser or driver income</a></li>
-<li><a href="#subtab4" class="wb-tabs-ext">Other self-employed income</a></li>
+<li><a href="#subtab3" class="wb-tabs-ext">Self-employed fishing, barber, hairdresser or driver income</a></li>
+<li><a href="#subtab4" class="wb-tabs-ext">Self-employed farming and other self-employed income</a></li>
 </ul>
 
 <details><summary><span class="fas fa-comments"></span> What if you do not know if a worker is an employee or is self-employed </summary>
@@ -740,7 +740,7 @@
 
 
  <details id="subtab3">
-        <summary>Self-employed fishing, farming, barber or hairdresser, driver income</summary>
+        <summary>Self-employed fishing, barber or hairdresser, driver income</summary>
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
 
@@ -758,8 +758,6 @@
 
 <p> <a href="#self-connect-fish" aria-controls="self-connect-fish" class="overlay-lnk" role="button">Examples of self-employment fishing income where exempt or not exempt <span class="far fa-question-circle"></span></a> </p>
 
-<h4>Self-employed farming income</h4>
-<p><a href="#self-connect-farming-how" aria-controls="self-connect-farming-how" class="overlay-lnk" role="button">How to apply the factors for self-employed farming income<span class="far fa-question-circle"></span></a> for the connecting factors test. </p>
 </div>
 <hr>
 
@@ -867,7 +865,7 @@
 </ol>
  </details>
 <details id="subtab4">
-        <summary>Other self-employed income</summary>
+        <summary>Self-employed farming and other self-employed income</summary>
 
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
@@ -881,6 +879,8 @@
 
 <p> <a href="#self-connect" aria-controls="self-connect" class="overlay-lnk" role="button">Examples of business or self-employment income situated on a reserve <span class="far fa-question-circle"></span></a> </p>
 
+<h4>Self-employed farming income</h4>
+<p><a href="#self-connect-farming-how" aria-controls="self-connect-farming-how" class="overlay-lnk" role="button">How to apply the factors for self-employed farming income<span class="far fa-question-circle"></span></a> for the connecting factors test. </p>
 </div>
 
 <hr>
@@ -1128,8 +1128,7 @@
 <section id="self-connect-fish-how" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">How to apply the factors for self-employed fishing income </h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#connect-fishing-income1"></div>
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#connect-fishing-income2"></div>
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#connect-fishing-income3"></div>
+	
 	</div></section>
 
 <section id="self-connect-farming-how" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">How to apply the factors for self-employed farming income </h2>
