--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -909,8 +909,8 @@
 
 </li>
 
-<li><h3 id="tab4-step3">Withhold deductions on the payment made to the First Nations self-employed recipient</h3>
-<p class="mrgn-bttm-lg">Generally, you  <strong>do not</strong> withhold the following deductions on the payment made to the First Nations self-employed recipient regardless if the income is exempt or partly-exempt:</p>
+<li><h3 id="tab4-step3">Withhold deductions on the payment made to the First Nations self-employed worker</h3>
+<p class="mrgn-bttm-lg">Generally, you  <strong>do not</strong> withhold the following deductions on the payment made to the First Nations self-employed worker regardless if the income is exempt or partly-exempt:</p>
 
 <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-times text-danger fa-li"></span> Income tax </li>	
@@ -923,7 +923,7 @@
 
 <li><h3 id="tab4-step4">Report the payment on a T4A slip</h3>
 
-<p class="mrgn-bttm-lg">Generally, you must report on a <strong>T4A slip</strong> the payment made to the First Nations self-employed recipient depending if the income is:</p>
+<p class="mrgn-bttm-lg">Generally, you must report on a <strong>T4A slip</strong>, if the total payments for the calendar year made to the First Nations self-employed worker are <strong>more than $500</strong> or you deducted income tax depending if the income is:</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4>All exempt</h4>
