--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -760,10 +760,10 @@
 <p>To determine if the income is situated on a reserve, you must apply the <a href="#factors-test" aria-controls="factors-test" class="overlay-lnk" role="button">connecting factors test <span class="far fa-question-circle"></span></a> to the income to meet all conditions for the exemption. </p>
 <p> <a href="#self-connect" aria-controls="self-connect" class="overlay-lnk" role="button">Examples of business or self-employment income situated on a reserve <span class="far fa-question-circle"></span></a> </p>
 
-<h4>Self-employed fishing income</h4>
-<p><a href="#self-connect-fish-how" aria-controls="self-connect-fish-how" class="overlay-lnk" role="button">How to apply the factors for self-employed fishing income<span class="far fa-question-circle"></span></a> for the connecting factors test. </p>
-
+<details><summary>How to apply the factors for <strong>self-employed fishing</strong> income</summary>
+<p>You must apply the <a href="#self-connect-fish-how" aria-controls="self-connect-fish-how" class="overlay-lnk" role="button">factors for self-employed fishing income<span class="far fa-question-circle"></span></a> for the connecting factors test. </p>
 <p> <a href="#self-connect-fish" aria-controls="self-connect-fish" class="overlay-lnk" role="button">Examples of self-employment fishing income where exempt or not exempt <span class="far fa-question-circle"></span></a> </p>
+</details>
 
 </div>
 <hr>
