--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -886,8 +886,9 @@
 
 <p> <a href="#self-connect" aria-controls="self-connect" class="overlay-lnk" role="button">Examples of business or self-employment income situated on a reserve <span class="far fa-question-circle"></span></a> </p>
 
-<h4>Self-employed farming income</h4>
-<p><a href="#self-connect-farming-how" aria-controls="self-connect-farming-how" class="overlay-lnk" role="button">How to apply the factors for self-employed farming income<span class="far fa-question-circle"></span></a> for the connecting factors test. </p>
+<details><summary>How to apply the factors for <strong>self-employed farming</strong> income</summary>
+<p>You must apply the <a href="#self-connect-farming-how" aria-controls="self-connect-farming-how" class="overlay-lnk" role="button">factors for self-employed farming income<span class="far fa-question-circle"></span></a> for the connecting factors test. </p>
+</details>
 </div>
 
 <hr>
