added 'contact us' to ia

--- a/subway/fire/index.html
+++ b/subway/fire/index.html
@@ -76,6 +76,8 @@
                          
                            <dt><a href="5.html">Make corrections after filing</a></dt>
                            <dd>Page description. Lorem ipsum dolor sit amet, consectetur adipiscing elit</dd>
+						   <dt><a href="6.html">Contact us</a></dt>
+                           <dd>Page description. Lorem ipsum dolor sit amet, consectetur adipiscing elit</dd>
                         </dl>
                      </nav>
                     <aside class="gc-subway-support">
