--- a/subway/fire/1.html
+++ b/subway/fire/1.html
@@ -65,6 +65,7 @@
                   <li><a href="3.html">Get ready to file</a></li>
                   <li><a href="4.html">How to file</a></li>
                   <li><a href="5.html">Make corrections after filing</a></li>
+				  <li><a href="6.html">Contact us</a></li>
                </ul>
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">What to fill out</h1>
