--- a/subway/fire/5.html
+++ b/subway/fire/5.html
@@ -65,6 +65,7 @@
                   <li><a href="3.html">Get ready to file</a></li>
                   <li><a href="4.html">How to file</a></li>
                   <li><a href="5.html" class="active">Make corrections after filing</a></li>
+				   <li><a href="6.html">Contact us</a></li>
                </ul>
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">Make corrections after filing</h1>
@@ -84,7 +85,12 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
             <h2 id="h-4">Heading D</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-
+            <nav class="gc-subway-pagination">
+               <h2 class="wb-inv">Document navigation</h2>
+               <ul class="pager">
+                  <li class="next"><a href="6.html" rel="next"><span class="wb-inv">Next: </span>Contact us</a></li>
+               </ul>
+            </nav>
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
             <script type="text/javascript">
