--- a/subway/fire/6.html
+++ b/subway/fire/6.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>How to file - File electronically: Information returns (tax slips and tax summaries) - Canada.ca</title>
+         <title>Contact us - File electronically: Information returns (tax slips and tax summaries) - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -63,12 +63,12 @@
                   <li><a href="1.html">What to fill out</a></li>
                   <li><a href="2.html">When to file</a></li>
                   <li><a href="3.html">Get ready to file</a></li>
-                  <li><a href="4.html" class="active">How to file</a></li>
-                  <li><a href="5.html">Make corrections after filing</a></li>
-				  <li><a href="6.html">Contact us</a></li>
+                  <li><a href="4.html">How to file</a></li>
+				  <li><a href="5.html">Make corrections after filing</a></li>
+                  <li><a href="6.html" class="active">Contact us</a></li>
                </ul>
             </nav>
-            <h1 property="name" id="wb-cont" class="gc-thickline">How to file</h1>
+            <h1 property="name" id="wb-cont" class="gc-thickline">Contact us</h1>
             <p>Page content. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
             <h2 class="h3">On this page</h2>
             <ul>
@@ -85,12 +85,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
             <h2 id="h-4">Heading D</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam commodo elementum est, ac ultrices urna convallis vitae.</p>
-            <nav class="gc-subway-pagination">
-               <h2 class="wb-inv">Document navigation</h2>
-               <ul class="pager">
-                  <li class="next"><a href="5.html" rel="next"><span class="wb-inv">Next: </span>Make corrections after filing</a></li>
-               </ul>
-            </nav>
+
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
             <script type="text/javascript">
