--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -914,9 +914,9 @@
 <p class="mrgn-bttm-lg">Generally, you  <strong>do not</strong> withhold the following deductions on the payment made to the First Nations self-employed worker regardless if the income is exempt or partly-exempt:</p>
 
 <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax </li>	
-<li><span class="fas fa-times text-danger fa-li"></span> EI </li>
-<li><span class="fas fa-times text-danger fa-li"></span> CPP </li> 
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
+<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
+<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li> 
 </ul>
 
  </li>
