--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -693,7 +693,7 @@
 <li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
 <li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li> 
  </ul></li></ul>
-
+<p class="mrgn-tp-lg">Learn more: <span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate payroll deductions and contributions</a> </p>
  </li>
 
 <li><h3 id="tab2-step4">Report the payment on a T4A slip</h3>
