--- a/payroll/calculate/benefit/loans.html
+++ b/payroll/calculate/benefit/loans.html
@@ -331,7 +331,7 @@
 <details><summary>Loans received because of shareholdings</summary>
 <div id="ajax-shareholdings">
  
-<p>Loans received or debts incurred because of shareholdings may create a taxable benefit when <strong>all</strong> of the following apply:</p>
+<p>Loans received or debts incurred because of shareholdings may give rise to an interest benefit when <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
 
   <li class="cnjnctn-col">  The loan is received, or the debt is incurred, by a person or partnership (except when the person is a corporation resident in Canada, or the partnership is one in which each partner is a corporation resident in Canada)</li>
@@ -339,7 +339,7 @@
 <ul class="list-unstyled cnjnctn-type-or">
 
   <li class="cnjnctn-col">A shareholder of a corporation</li>
-<li class="cnjnctn-col">Related to a shareholder of a corporation</li>
+<li class="cnjnctn-col">Connected with a shareholder of a corporation</li>
 <li class="cnjnctn-col">A member of a partnership or beneficiary of a trust that was a shareholder of a corporation</li></ul></li>
   <li class="cnjnctn-col">Because of these shareholdings, the person or partnership receives a loan from, or incurs a debt to <strong>one</strong> of the following:
 <ul class="list-unstyled cnjnctn-type-or">
@@ -386,12 +386,12 @@
 </details>
 
 <details><summary>Forgivable loans specific to pursuing education or research</summary>
-<p>If you provide an employee with a forgivable loan to enable them to pursue education or research on the condition that they return to employment with you, the amount paid is not to be included in their income at the time they receive it. When the loan (or part of the loan) is later forgiven for the reason that the employment conditions were met, the forgiven part would be included as employment income in the year it was forgiven.</p>
+<p>If you provide an employee with a forgivable loan to enable them to pursue education or research on the condition that they return to employment with you, the amount is generally not included in their income at the time they receive it. If the loan (or part of the loan) is later forgiven for the reason that the employment conditions were met, the forgiven part would be included as employment income in the year it was forgiven.</p>
 <p>To determine if the benefit is taxable on forgivable loans related to scholarships, fellowships, bursaries or research grants, refer to: <a href="/cra-arc/payroll/calculate/benefit/index.html">Educational benefits - Scholarships, bursaries, tuition, and training</a>.</p>
 </details>
 
-<details><summary>Loans considered a repayable award</summary>
-<p>If the loan is considered a repayable award, the amount is considered employment income and must be included on the slip <strong>in the year received</strong>.</p>
+<details><summary>Forgivable loans vs repayable award</summary>
+<p>Forgivable loans are different from repayable awards. If you provide your employee with a repayable award, the amount is considered employment income and must be included on the slip <strong>in the year received</strong>.</p>
 </details>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
