--- a/payroll/calculate/benefit/loans.html
+++ b/payroll/calculate/benefit/loans.html
@@ -390,8 +390,8 @@
 <p>To determine if the benefit is taxable on forgivable loans related to scholarships, fellowships, bursaries or research grants, refer to: <a href="/cra-arc/payroll/calculate/benefit/index.html">Educational benefits - Scholarships, bursaries, tuition, and training</a>.</p>
 </details>
 
-<details><summary>Forgivable loans vs repayable award</summary>
-<p>Forgivable loans are different from repayable awards. If you provide your employee with a repayable award, the amount is considered employment income and must be included on the slip <strong>in the year received</strong>.</p>
+<details><summary>Repayable award</summary>
+<p>Repayable awards are different from forgivable loans. If you provide your employee with a repayable award, the amount is considered employment income and must be included on the slip <strong>in the year received</strong>.</p>
 </details>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
